<resources>
    <string name="app_name">FoodTracker</string>
    <string name="back">Back</string>
    <string name="meal_title">Meal Title</string>
    <string name="meal_description">Meal Description</string>
    <string name="submit_meal">Submit Meal</string>
    <string name="add_meal">Add Meal</string>
    <string name="warning_text">You Need to Fill out all the fields</string>
    <string name="add_photo">Add Photo</string>
    <string name="geroButton">Gero</string>
</resources>
